fixed the issue where navbar had a low z-index

--- a/assets/css_js/style.css
+++ b/assets/css_js/style.css
@@ -66,6 +66,7 @@ body {
   padding: 0;
   display: flex;
   gap: 20px;
+  z-index: 999;
 }
 
 .navbar ul li a {
